--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>HakkoFX</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <p>This is my git page.</p>
+    </body>
+</html>
