css and js update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>HakkoFX</title>
+        <link rel="stylesheet" href="styles/index.css">
+        <script type="javascript" src="logic/index.js"></script>
     </head>
     <body>
         <h1>Hello World!</h1>
