--- a/homepage.html
+++ b/homepage.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>HakkoFX</title>
-        <link rel="stylesheet" href="styles/homepage.css">
-        <script type="text/javascript" src="logic/homepage.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/homepage.css">
+        <script rel="script" type="text/javascript" src="logic/homepage.js"></script>
     </head>
     <body>
         <h1>Hello World!</h1>
